--- a/r/royal-will-K7P2.html
+++ b/r/royal-will-K7P2.html
@@ -4,16 +4,15 @@
   <meta charset="UTF-8" />
   <title>Leave a Review</title>
 
-  <!-- Prevent search engines from indexing -->
   <meta name="robots" content="noindex, nofollow">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="../styles.css">
-  <script src="../script.js"></script>
 </head>
 <body>
 
   <div class="card">
-    <h1>Leave Will a quick Google review</h1>
+    <h1>Leave Will a quick review</h1>
     <p class="business">Royal Detailing</p>
 
     <button id="draftBtn">Draft review with AI</button>
@@ -28,7 +27,7 @@
       <button id="copyBtn">Copy review</button>
 
       <a
-        href="https://www.google.com/search?q=royal+detailing&rlz=1C5MACD_enUS1090US1090&oq=royal+detailing&gs_lcrp=EgZjaHJvbWUyCQgAEEUYORiABDIHCAEQABiABDINCAIQLhivARjHARiABDIHCAMQABiABDINCAQQLhivARjHARiABDIHCAUQABiABDIHCAYQABiABDIGCAcQRRg80gEIMjYwOGowajeoAgCwAgA&sourceid=chrome&ie=UTF-8&zx=1766119240407&no_sw_cr=1&lqi=Cg9yb3lhbCBkZXRhaWxpbmdIvt3Uv8a9gIAIWhkQABABGAAYASIPcm95YWwgZGV0YWlsaW5nkgEVY2FyX2RldGFpbGluZ19zZXJ2aWNl4AEA#lkt=LocalPoiReviews&rlimm=9060739647186885670&lrd=0x46b7ce7e0022660d:0x7dbe36b408df5c26,3,,,,"
+        href="https://www.google.com/maps?cid=0x7dbe36b408df5c26"
         target="_blank"
         class="google-btn"
       >
@@ -37,10 +36,11 @@
     </div>
 
     <p class="note">
-      You can edit the review before posting.
+      After tapping, paste your review and submit.
     </p>
   </div>
 
   <script src="../script.js"></script>
 </body>
 </html>
+
