--- a/r/royal-will-K7P2.html
+++ b/r/royal-will-K7P2.html
@@ -27,7 +27,7 @@
       <button id="copyBtn">Copy review</button>
 
       <a
-        href="https://www.google.com/search?client=safari&hs=4g1o&sca_esv=4803eec076037992&hl=en-us&q=royal+detailing+logan+reviews&uds=AOm0WdHv-KjXZ_jFFlaGfii-hMvoqXrDGR0ZUkshGtfXWm4xSjYJG1lMn3ul3TLU-8ySWzsAz_Jz3_rIix_qdmQovUp7Sjs9ua8oaL611R8kEZLPashno_QnreNCyjPzBJNNCHUZyrUsTFWnj4bge2BrZgpFwatLOYl0XvSdDQf0zhvCavlbHAOJn5x1WRVfosb-6dJwDybrkTsOJYQ-StXnPn04jiLr97hQ5ojMYoWs8D4eBaPu4SY9rOG4PVyiOcLcalNuLjJXcHJuQ8Qi32G4LyX7Flk67QtC96wtS1rPRLmgbXWNp_l0cVherktcLFo4ZQh03aFlBGm5cndnykKSehmXYVOXzA5iln5VZVQWRya6SVbWASQL1VJ4P1hFehZVw6MMnZFndHozYOc9SzDuEx8kHoKLIjDVdns4JLhHeV1ZkVej9DT3R569P32wlwdaG9YyOanHRrr3bzqB1_6_WOgCxtcM6w&si=AMgyJEtREmoPL4P1I5IDCfuA8gybfVI2d5Uj7QMwYCZHKDZ-EyNOCg9Hk5nSzIFpr2kyV2Mr_whsUc0VzSILhtYncWvGWIM600iMaUWIQRAf_iAAeTsfsDfY6vDmKHe7UDKyumwAMAP92VYFvK6S7awhRP06kwbMuA%3D%3D&sa=X&ved=2ahUKEwi5wOLulNKRAxX8hu4BHftyM0gQk8gLegQIHRAB&ictx=1&biw=393&bih=641&dpr=3"
+        href="https://www.google.com/search?client=safari&hs=4g1o&sca_esv=4803eec076037992&hl=en-us&q=royal+detailing+logan+reviews#lrd=0x46b7ce7e0022660d:0x7dbe36b408df5c26,3,,,,"
         target="_blank"
         class="google-btn"
       >
@@ -35,7 +35,7 @@
       </a>
     </div>
 
-    <p class="note">
+    <p class="note" id="statusNote">
       After tapping, paste your review and submit.
     </p>
   </div>
