--- a/r/royal-will-K7P2.html
+++ b/r/royal-will-K7P2.html
@@ -27,7 +27,7 @@
       <button id="copyBtn">Copy review</button>
 
       <a
-        href="https://www.google.com/search?client=safari&hs=4g1o&sca_esv=4803eec076037992&hl=en-us&q=royal+detailing+logan+reviews#lrd=0x46b7ce7e0022660d:0x7dbe36b408df5c26,3,,,,"
+        href="https://www.google.com/maps?cid=0x7dbe36b408df5c26"
         target="_blank"
         class="google-btn"
       >
@@ -35,7 +35,7 @@
       </a>
     </div>
 
-    <p class="note" id="statusNote">
+    <p class="note">
       After tapping, paste your review and submit.
     </p>
   </div>
@@ -43,3 +43,4 @@
   <script src="../script.js"></script>
 </body>
 </html>
+
