--- a/r/royal-will-K7P2.html
+++ b/r/royal-will-K7P2.html
@@ -11,7 +11,11 @@
 </head>
 <body>
 
-  <div class="card">
+  <div class="card"
+  data-business="Royal Detailing"
+  data-employee="Will"
+  data-google-url="https://www.google.com/maps?cid=0x7dbe36b408df5c26">
+
     <h1>Leave Will a quick review</h1>
     <p class="business">Royal Detailing</p>
 
