--- a/r/royal-will-K7P2.html
+++ b/r/royal-will-K7P2.html
@@ -31,7 +31,7 @@
       <button id="copyBtn">Copy review</button>
 
       <a
-        href="https://www.google.com/maps?cid=0x7dbe36b408df5c26"
+        href="https://www.google.com/search?client=safari&hs=UABp&sca_esv=4ba3af865432350d&hl=en-us&sxsrf=ANbL-n7ZEtOCw0OQSClYqUYQ90iudrA74A:1768624956122&q=royal+detailing+logan+reviews&uds=ALYpb_l3bLDGnYAPFDEhPJXZ7OLst8YT4ckunFU2XmvYPc5nLdW1V2sRLei1bKlLfI4ESO-P-URk52oNPN2f7tpZbGBQ39fq3ITmfmVpQs_-i2f_dH3X7ohNtKmER0EYdO61cJZVKbomT-ZMFlq4W3yec0PQQgUJQHFtRZYjM_cnf24AlEE4lHmRKCb4QOUSbLPhiigzFoQ6IVGhslP2B3w-iW4gSouhI7JAbRoNiIKfVa9KGmsfWctRWcytEFytkbq7Ygql2kBt0UbNTVxXuGsc87aBBj4JleaSogeqaH7fhbbuzJXPqyGpeqb_3v7tbEtF5H_2-bu4umT7tfYz6aom02w3VOCL6sOWqfvIfhhCsXeQjULEkN0iRK2jyvb3K_9dwJ8_yt9DVsSwh6z5oaNdWaBrVCR6oLQCKvpYegfTIbUiJvLOz2rNfZTNuvesSWo8EA0wRU1Zl_qwfP1xlD9t8-KyEG1wjg&si=AL3DRZEsmMGCryMMFSHJ3StBhOdZ2-6yYkXd_doETEE1OR-qObOMmiTiAuRjeWgTpshoU7hJNKdLITqgxHzydgouoIBijl5uIl7H7WrO1vHF8w6YJG7jDjOzboJoEZ483yYMMkqpAGzJ6L4O5eHSg5nPEjz2pBf0VA%3D%3D&sa=X&ved=2ahUKEwi3n4Cy4ZGSAxU8JUQIHVohKSgQk8gLegQIGxAB&ictx=1&biw=402&bih=768&dpr=3&aic=0"
         target="_blank"
         class="google-btn"
       >
