--- a/r/swave-tristan-Z9P1.html
+++ b/r/swave-tristan-Z9P1.html
@@ -15,7 +15,7 @@
   data-employee="Tristan"
   data-business-type="solar"
   data-service-notes="explained solar options clearly, went over pricing and savings"
-  data-google-review-url="https://search.google.com/local/writereview?placeid=0xd72d46d72b4b20ab">
+  data-google-review-url="https://www.google.com/maps/place/Swave+Solutions+Inc,+1355+Logan+Ave+%237,+Costa+Mesa,+CA+92626/@33.6782319,-117.9136193,16z/data=!4m6!3m5!1s0x80dcdfde835e1c4b:0xd72d46d72b4b20ab!8m2!3d33.6782319!4d-117.9136193!16s%2Fg%2F11x_zzvhwq?g_ep=Eg1tbF8yMDI2MDExNF8wIJvbDyoASAJQAg%3D%3D">
 
     <h1>Leave Tristan a quick review</h1>
     <p class="business">Swave Solutions</p>
