--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>TapReview</title>
+        <title>RevTags/title>
         <link rel="stylesheet" href="styles.css" />
         <script src="script.js"></script>
     </head>
     <body>
-        <h1 class="title">Tap Review</h1>
-        <div id="mainDiv">Hi we are Tap Review!</div>
+        <h1 class="title">RevTags</h1>
+        <div id="mainDiv">Hi we are RevTags!</div>
         <br />
         <button onclick="buttonClicked()">Click me</button>
     </body>
