--- a/r/swave-jake-G5H3.html
+++ b/r/swave-jake-G5H3.html
@@ -15,7 +15,7 @@
   data-employee="Jake"
   data-business-type="solar"
   data-service-notes="explained solar options clearly, went over pricing and savings"
-  data-google-review-url="https://www.google.com/maps/place/Swave+Solutions+Inc,+1355+Logan+Ave+%237,+Costa+Mesa,+CA+92626/@33.6782319,-117.9136193,16z/data=!4m6!3m5!1s0x80dcdfde835e1c4b:0xd72d46d72b4b20ab!8m2!3d33.6782319!4d-117.9136193!16s%2Fg%2F11x_zzvhwq?g_ep=Eg1tbF8yMDI2MDExNF8wIJvbDyoASAJQAg%3D%3D">
+  data-google-review-url="https://www.google.com/search?sca_esv=bfda1312cc855ae4&hl=en-US&sxsrf=ANbL-n4HuZy0JseQFtkgF0CLTIR-FYzyjg:1768844190617&q=swave+solutions+inc+costa+mesa+reviews&uds=ALYpb_kVFjAOnsjmKO9QNStwgdbSIaXZgLLKgFTwQ4859jgFcJLMJbfCVK5OLVhZPAIfEAVZi3D42YZf0OhlATHdBAjrW4YIlujqVz90vrkWrM1pQRlvagoeIcOErLq9Dlts31KA7vrRO6ioqokq5BGZtgg28chg5avI8EDJBNsV66AOX2Xrt6pn6hGi1wlV1GgXd3Ia_7W6lB30vIdjSJ79PHTMzE2mu4lLzqu7Uw0zlWprU29plMMGRCFthHKMqTI4YsiSURiS25GqwqmRA3h1qJHX5wxfNm12Nac2qTIi9UgSIQa_2_RRpduj_1ZaBwelxhue9hL0CDpG8EJBYwPLGqxUgow0swZo0U3IASi0pC1XekhLFgSCzB6-l8BVZDSd5zF_HCmDHQD_aGzQWgMCbRp5zRiNXw&si=AL3DRZEsmMGCryMMFSHJ3StBhOdZ2-6yYkXd_doETEE1OR-qOSkHtG7ux6pdtnjEASwJJhUeNDFTmCBETe61tZDUVmS5EVbtfCh3m-Zx9LlO2NB_tSU-0-W8UeJe4dYiJiIvnpO2j-zThvzuwqbj22S81pUmPQzviw%3D%3D&sa=X&ved=2ahUKEwiL-5ONkpiSAxWaIEQIHSz9L18Qk8gLegQIGhAB&ictx=1&stq=1&cs=1&lei=nmtuaYu0JZrBkPIPrPq_-QU#ebo=1">
 
     <h1>Leave Jake a quick review</h1>
     <p class="business">Swave Solutions</p>
