--- a/r/swave-tristan-Z9P1.html
+++ b/r/swave-tristan-Z9P1.html
@@ -12,12 +12,12 @@
 <body>
 
 <div class="card"
-  data-employee="Tristan"
+  data-employee="Josh"
   data-business-type="solar"
   data-service-notes="explained solar options clearly, went over pricing and savings"
   data-google-review-url="https://www.google.com/search?sca_esv=bfda1312cc855ae4&hl=en-US&sxsrf=ANbL-n4HuZy0JseQFtkgF0CLTIR-FYzyjg:1768844190617&q=swave+solutions+inc+costa+mesa+reviews&uds=ALYpb_kVFjAOnsjmKO9QNStwgdbSIaXZgLLKgFTwQ4859jgFcJLMJbfCVK5OLVhZPAIfEAVZi3D42YZf0OhlATHdBAjrW4YIlujqVz90vrkWrM1pQRlvagoeIcOErLq9Dlts31KA7vrRO6ioqokq5BGZtgg28chg5avI8EDJBNsV66AOX2Xrt6pn6hGi1wlV1GgXd3Ia_7W6lB30vIdjSJ79PHTMzE2mu4lLzqu7Uw0zlWprU29plMMGRCFthHKMqTI4YsiSURiS25GqwqmRA3h1qJHX5wxfNm12Nac2qTIi9UgSIQa_2_RRpduj_1ZaBwelxhue9hL0CDpG8EJBYwPLGqxUgow0swZo0U3IASi0pC1XekhLFgSCzB6-l8BVZDSd5zF_HCmDHQD_aGzQWgMCbRp5zRiNXw&si=AL3DRZEsmMGCryMMFSHJ3StBhOdZ2-6yYkXd_doETEE1OR-qOSkHtG7ux6pdtnjEASwJJhUeNDFTmCBETe61tZDUVmS5EVbtfCh3m-Zx9LlO2NB_tSU-0-W8UeJe4dYiJiIvnpO2j-zThvzuwqbj22S81pUmPQzviw%3D%3D&sa=X&ved=2ahUKEwiL-5ONkpiSAxWaIEQIHSz9L18Qk8gLegQIGhAB&ictx=1&stq=1&cs=1&lei=nmtuaYu0JZrBkPIPrPq_-QU#ebo=1">
 
-    <h1>Leave Tristan a quick review</h1>
+    <h1>Leave Josh a quick review</h1>
     <p class="business">Swave Solutions</p>
 
     <button id="draftBtn">Draft review with AI</button>
