--- a/index.html
+++ b/index.html
@@ -158,67 +158,70 @@
 
     </section>
 
-    <!-- Pricing -->
-    <section class="section" id="pricing">
-      <div class="container">
-        <h2>Pricing</h2>
+   <!-- Pricing -->
+<section class="section" id="pricing">
+  <div class="container">
+    <h2>Pricing</h2>
 
-        <div class="pricing-grid">
-          <div class="price">
-            <div class="price-head">
-              <h3>Basic</h3>
-              <p class="muted">Best for small teams</p>
-            </div>
-            <div class="price-num">$19<span>/mo</span></div>
-            <ul>
-              <li>3 tags included - $1.99/per additional employee tag. </li>
-              <li>Up to 5 employees</li>
-              <li>Unlimited drafts</li>
-              <li>Priority support</li>
-            </ul>
-            <a class="btn" href="#contact">Start Basic</a>
-          </div>
-
-          <div class="price featured">
-            <div class="badge">Most popular</div>
-            <div class="price-head">
-              <h3>Business</h3>
-              <p class="muted">Most businesses land here</p>
-            </div>
-            <div class="price-num">$49<span>/mo</span></div>
-            <ul>
-              <li>10 tags included - $1.99/per additional employee tag. </li>
-              <li>Unlimited employees</li>
-              <li>Unlimited drafts</li>
-               <li>Free replacement tags</li>
-              <li>Priority support</li>
-            </ul>
-            <a class="btn" href="#contact">Start Business</a>
-          </div>
-
-          <div class="price">
-            <div class="price-head">
-              <h3>Annual</h3>
-              <p class="muted">Save when you commit</p>
-            </div>
-            <div class="price-num">$450<span>/yr</span></div>
-            <ul>
-              <li>20 tags included - $1.99/per additional employee tag. </li>
-              <li>Unlimited employees</li>
-              <li>Unlimited drafts</li>
-              <li>Custom Tags</li>
-              <li>Free replacement tags</li>
-              <li>Best value</li>
-            </ul>
-            <a class="btn" href="#contact">Go Annual</a>
-          </div>
+    <div class="pricing-grid">
+      <!-- SOLO -->
+      <div class="price">
+        <div class="price-head">
+          <h3>Solo</h3>
+          <p class="muted">Perfect for a one-person business</p>
         </div>
-
-        <p class="tiny muted center">
-          Note: Reviews are written and submitted by customers. RevTags does not post reviews on behalf of users.
-        </p>
+        <div class="price-num">$20<span>/mo</span></div>
+        <ul>
+          <li>Includes 1 employee tag</li>
+          <li>Unlimited drafts</li>
+          <li>Works on iPhone + Android</li>
+          <li>Email/text setup support</li>
+        </ul>
+        <a class="btn" href="#contact">Start Solo</a>
       </div>
-    </section>
+
+      <!-- TEAM -->
+      <div class="price featured">
+        <div class="badge">Most popular</div>
+        <div class="price-head">
+          <h3>Team</h3>
+          <p class="muted">Great for small teams</p>
+        </div>
+        <div class="price-num">$49<span>/mo</span></div>
+        <ul>
+          <li>Up to 10 employees</li>
+          <li>Includes 10 employee tags</li>
+          <li>Unlimited drafts</li>
+          <li>Free replacement tags</li>
+          <li>Priority support</li>
+        </ul>
+        <a class="btn" href="#contact">Start Team</a>
+      </div>
+
+      <!-- SALES -->
+      <div class="price">
+        <div class="price-head">
+          <h3>Sales</h3>
+          <p class="muted">Built for larger teams and reps</p>
+        </div>
+        <div class="price-num">$199<span>/mo</span></div>
+        <ul>
+          <li>Up to 50 employees</li>
+          <li>Includes 50 employee tags</li>
+          <li>Unlimited drafts</li>
+          <li>Free replacement tags</li>
+          <li>Fast onboarding + support</li>
+        </ul>
+        <a class="btn" href="#contact">Start Sales</a>
+      </div>
+    </div>
+
+    <p class="tiny muted center">
+      Note: Reviews are written and submitted by customers. RevTags does not post reviews on behalf of users.
+    </p>
+  </div>
+</section>
+
 
     <!-- FAQ -->
     <section class="section soft" id="faq">
