--- a/r/Nails-Cambria-X1P3.html
+++ b/r/Nails-Cambria-X1P3.html
@@ -11,41 +11,122 @@
 </head>
 <body>
 
-<div class="card"
+<div
+  class="card"
   data-employee="Cambria"
   data-business="The Nail Studio"
   data-business-type="nails"
-  data-google-review-url="https://www.google.com/search?client=safari&hs=FD09&sca_esv=04aa8d85dd72ea04&hl=en-us&sxsrf=ANbL-n4GwLx78847uw2tqLCkj73f21nWAg:1770864829726&q=the+nail+studio+logan+reviews&uds=ALYpb_l3bLDGnYAPFDEhPJXZ7OLsWCkxh24CGRV4zKRTP0eRfmZJm1YxeQzp4A1jJtngmKtixWw48zxW6frlOFRRROP1ig7qrKqxLIBAKZubEYPrD3ifRHHNQUzo8n0GkLf79aD1UMJrkElobuBx95adub7o-_Mm2ESPpXU5p_LPwAhCGZS2D3YMfF7nI1XiSiB2YsHc0FZgUtOCe-P7eBv7r08ytLHkdQ1gP39R8mAEZNJuoe-ecDMLwEtAY1D1-5Ulaj_Uc5DoETYgRXxd7zgEKRUXmKyMbE99KquI3pCYNY88LZ5gHMTXEtcBdUni08s3WXrjEONnxiZos445ntttuok2FTrYTvuM8TJouwsOdESnFKWRw8pTG8GwNMsMtvIbqPzbMz6ziRvY-hOXhIlLsZ21ltedwNf2ReQ_EECWxaGQ6RzIA6PVDHqgEgb0ItxXD7NKLI-KT5EA0T1r-CjSEdZwHmrT9Q&si=AL3DRZEsmMGCryMMFSHJ3StBhOdZ2-6yYkXd_doETEE1OR-qOZ635r50l2WLeWCD-pVsGsfLY0pbxXUhFdQPjLi5l8z3R5M1KBZWr0DW1F755sHMDgdEPsNtrjIcbxHVpAqruW1LVh3HvyDjpflB-9wyOvPHeWkfhA%3D%3D&sa=X&ved=2ahUKEwjy2_vI-dKSAxVbIUQIHa91KuoQk8gLegQIGxAB&ictx=1&stq=1&cs=1&lei=vUCNabKJLNvCkPIPr-up0Q4#ebo=1">
+  data-google-review-url="https://www.google.com/search?client=safari&hs=FD09&sca_esv=04aa8d85dd72ea04&hl=en-us&sxsrf=ANbL-n4GwLx78847uw2tqLCkj73f21nWAg:1770864829726&q=the+nail+studio+logan+reviews&uds=ALYpb_l3bLDGnYAPFDEhPJXZ7OLsWCkxh24CGRV4zKRTP0eRfmZJm1YxeQzp4A1jJtngmKtixWw48zxW6frlOFRRROP1ig7qrKqxLIBAKZubEYPrD3ifRHHNQUzo8n0GkLf79aD1UMJrkElobuBx95adub7o-_Mm2ESPpXU5p_LPwAhCGZS2D3YMfF7nI1XiSiB2YsHc0FZgUtOCe-P7eBv7r08ytLHkdQ1gP39R8mAEZNJuoe-ecDMLwEtAY1D1-5Ulaj_Uc5DoETYgRXxd7zgEKRUXmKyMbE99KquI3pCYNY88LZ5gHMTXEtcBdUni08s3WXrjEONnxiZos445ntttuok2FTrYTvuM8TJouwsOdESnFKWRw8pTG8GwNMsMtvIbqPzbMz6ziRvY-hOXhIlLsZ21ltedwNf2ReQ_EECWxaGQ6RzIA6PVDHqgEgb0ItxXD7NKLI-KT5EA0T1r-CjSEdZwHmrT9Q&si=AL3DRZEsmMGCryMMFSHJ3StBhOdZ2-6yYkXd_doETEE1OR-qOZ635r50l2WLeWCD-pVsGsfLY0pbxXUhFdQPjLi5l8z3R5M1KBZWr0DW1F755sHMDgdEPsNtrjIcbxHVpAqruW1LVh3HvyDjpflB-9wyOvPHeWkfhA%3D%3D&sa=X&ved=2ahUKEwjy2_vI-dKSAxVbIUQIHa91KuoQk8gLegQIGxAB&ictx=1&stq=1&cs=1&lei=vUCNabKJLNvCkPIPr-up0Q4#ebo=1"
+>
+  <h1>Leave Cambria a quick review</h1>
+  <p class="business">The Nail Studio</p>
 
-    <h1>Leave Cambria a quick review</h1>
-    <p class="business">The Nail Studio</p>
+  <button id="draftBtn">Draft review with AI</button>
 
-    <button id="draftBtn">Draft review with AI</button>
+  <textarea
+    id="reviewText"
+    placeholder="Your review will appear here..."
+    rows="5"
+  ></textarea>
 
-    <textarea
-      id="reviewText"
-      placeholder="Your review will appear here..."
-      rows="5"
-    ></textarea>
+  <!-- New helper text (encourages editing on Google, keeps your flow fast) -->
+  <p class="note" id="editNote" style="margin-top:10px;">
+    Tip: Edit and personalize your review on the Google page before posting.
+  </p>
 
-    <div class="actions">
-      <button id="copyBtn">Copy review</button>
+  <div class="actions">
+    <button id="copyBtn">Copy review</button>
 
-      <a
-        id="googleBtn"
-        href="#"
-        target="_blank"
-        class="google-btn"
-      >
-        Open Google review
-      </a>
-    </div>
+    <a
+      id="googleBtn"
+      href="#"
+      target="_blank"
+      rel="noopener"
+      class="google-btn"
+    >
+      Open Google review
+    </a>
+  </div>
 
-    <p class="note">
-      After tapping, paste your review and submit.
-    </p>
+  <p class="note">
+    After tapping, paste your review and submit.
+  </p>
 </div>
 
 <script src="../script.js"></script>
+
+<!-- Cambria-only add-ons:
+     1) Redirect delay when opening Google
+     2) Lock textarea after draft appears (read-only) so edits happen on Google -->
+<script>
+(function () {
+  const reviewText = document.getElementById("reviewText");
+  const googleBtn = document.getElementById("googleBtn");
+  const draftBtn = document.getElementById("draftBtn");
+
+  if (!reviewText) return;
+
+  // ---- 1) Lock textbox AFTER a draft appears ----
+  let lockedOnce = false;
+
+  function lockBox() {
+    if (lockedOnce) return;
+    lockedOnce = true;
+
+    reviewText.readOnly = true;
+
+    // Light visual cue (no CSS file changes needed)
+    reviewText.style.background = "#f6f6f6";
+    reviewText.style.cursor = "default";
+  }
+
+  // Watch for the AI draft to appear (Cambria page only)
+  const watch = setInterval(() => {
+    const hasText = (reviewText.value || "").trim().length > 0;
+    if (hasText) {
+      lockBox();
+      clearInterval(watch);
+    }
+  }, 250);
+
+  // If they click Draft, unlock temporarily until draft arrives (optional)
+  // This prevents “why can’t I type” confusion if they tap the box first.
+  if (draftBtn) {
+    draftBtn.addEventListener("click", () => {
+      reviewText.readOnly = false;
+      reviewText.style.background = "";
+      reviewText.style.cursor = "";
+      lockedOnce = false;
+    });
+  }
+
+  // ---- 2) Redirect delay to Google ----
+  // Add a small delay on "Open Google review" click.
+  // This still feels instant, but avoids a "tap → post instantly" pattern.
+  if (googleBtn) {
+    googleBtn.addEventListener("click", (e) => {
+      // If the href is still "#", script.js hasn't filled it yet
+      const url = googleBtn.getAttribute("href") || "#";
+      if (!url || url === "#") return; // let it behave normally (or do nothing)
+
+      e.preventDefault();
+
+      const original = googleBtn.textContent;
+      googleBtn.textContent = "Opening Google…";
+      googleBtn.style.pointerEvents = "none";
+
+      // Adjust delay here if you want (1200–2500ms is a good range)
+      const delayMs = 1800;
+
+      setTimeout(() => {
+        window.open(url, "_blank", "noopener");
+        googleBtn.textContent = original;
+        googleBtn.style.pointerEvents = "";
+      }, delayMs);
+    });
+  }
+})();
+</script>
+
 </body>
 </html>
