--- a/r/Nails-Cambria-X1P3.html
+++ b/r/Nails-Cambria-X1P3.html
@@ -1,12 +1,72 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Leave a Review</title>
+
+  <meta name="robots" content="noindex, nofollow">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="../styles.css">
+</head>
+<body>
+
+<div class="card"
+  data-employee="Cambria"
+  data-business="The Nail Studio"
+  data-business-type="nails"
+  data-google-review-url="https://www.google.com/search?client=safari&hs=FD09&sca_esv=04aa8d85dd72ea04&hl=en-us&sxsrf=ANbL-n4GwLx78847uw2tqLCkj73f21nWAg:1770864829726&q=the+nail+studio+logan+reviews&uds=ALYpb_l3bLDGnYAPFDEhPJXZ7OLsWCkxh24CGRV4zKRTP0eRfmZJm1YxeQzp4A1jJtngmKtixWw48zxW6frlOFRRROP1ig7qrKqxLIBAKZubEYPrD3ifRHHNQUzo8n0GkLf79aD1UMJrkElobuBx95adub7o-_Mm2ESPpXU5p_LPwAhCGZS2D3YMfF7nI1XiSiB2YsHc0FZgUtOCe-P7eBv7r08ytLHkdQ1gP39R8mAEZNJuoe-ecDMLwEtAY1D1-5Ulaj_Uc5DoETYgRXxd7zgEKRUXmKyMbE99KquI3pCYNY88LZ5gHMTXEtcBdUni08s3WXrjEONnxiZos445ntttuok2FTrYTvuM8TJouwsOdESnFKWRw8pTG8GwNMsMtvIbqPzbMz6ziRvY-hOXhIlLsZ21ltedwNf2ReQ_EECWxaGQ6RzIA6PVDHqgEgb0ItxXD7NKLI-KT5EA0T1r-CjSEdZwHmrT9Q&si=AL3DRZEsmMGCryMMFSHJ3StBhOdZ2-6yYkXd_doETEE1OR-qOZ635r50l2WLeWCD-pVsGsfLY0pbxXUhFdQPjLi5l8z3R5M1KBZWr0DW1F755sHMDgdEPsNtrjIcbxHVpAqruW1LVh3HvyDjpflB-9wyOvPHeWkfhA%3D%3D&sa=X&ved=2ahUKEwjy2_vI-dKSAxVbIUQIHa91KuoQk8gLegQIGxAB&ictx=1&stq=1&cs=1&lei=vUCNabKJLNvCkPIPr-up0Q4#ebo=1">
+
+  <h1>Leave Cambria a quick review</h1>
+  <p class="business">The Nail Studio</p>
+
+  <button id="draftBtn">Draft review with AI</button>
+
+  <textarea
+    id="reviewText"
+    placeholder="Your review will appear here..."
+    rows="5"
+  ></textarea>
+
+  <div class="actions">
+    <button id="copyBtn">Copy review</button>
+
+    <a
+      id="googleBtn"
+      href="#"
+      target="_blank"
+      class="google-btn"
+    >
+      Open Google review
+    </a>
+  </div>
+
+  <p class="note">
+    After tapping, paste your review and finish editing it on Google before submitting.
+  </p>
+</div>
+
+<script src="../script.js"></script>
+
+<!-- ✅ REV TAGS SAFE DELAY + LOCKED TEXTBOX SCRIPT -->
 <script>
 (function () {
+
   const reviewText = document.getElementById("reviewText");
   const googleBtn = document.getElementById("googleBtn");
   const draftBtn = document.getElementById("draftBtn");
+  const card = document.querySelector(".card");
 
-  if (!reviewText) return;
+  if (!reviewText || !googleBtn || !card) return;
 
-  // ---- Lock textbox AFTER a draft appears ----
+  const googleUrl =
+    card.dataset.googleReviewUrl ||
+    card.dataset.googleUrl ||
+    "#";
+
+  googleBtn.href = googleUrl;
+
+  // -------- LOCK TEXT BOX AFTER AI FILLS IT --------
   let lockedOnce = false;
 
   function lockBox() {
@@ -19,14 +79,12 @@
   }
 
   const watch = setInterval(() => {
-    const hasText = (reviewText.value || "").trim().length > 0;
-    if (hasText) {
+    if ((reviewText.value || "").trim().length > 0) {
       lockBox();
       clearInterval(watch);
     }
   }, 250);
 
-  // If they click Draft, unlock temporarily until draft arrives
   if (draftBtn) {
     draftBtn.addEventListener("click", () => {
       reviewText.readOnly = false;
@@ -36,38 +94,42 @@
     });
   }
 
-  // ---- Redirect delay to Google (FIXED FOR iPHONE) ----
-  if (googleBtn) {
-    googleBtn.addEventListener("click", (e) => {
-      const url = googleBtn.getAttribute("href") || "#";
-      if (!url || url === "#") return;
+  // -------- GOOGLE REDIRECT DELAY (IPHONE SAFE) --------
+  googleBtn.addEventListener("click", (e) => {
 
-      e.preventDefault();
+    const url = googleBtn.getAttribute("href");
+    if (!url || url === "#") return;
 
-      const original = googleBtn.textContent;
-      googleBtn.textContent = "Opening Google…";
-      googleBtn.style.pointerEvents = "none";
+    e.preventDefault();
 
-      // Delay time (tweak if you want)
-      const delayMs = 1800;
+    const original = googleBtn.textContent;
+    googleBtn.textContent = "Opening Google…";
+    googleBtn.style.pointerEvents = "none";
 
-      // IMPORTANT: open a tab immediately (user gesture)
-      const newWin = window.open("about:blank", "_blank");
+    const delayMs = 1800;
 
-      setTimeout(() => {
-        try {
-          if (newWin && !newWin.closed) {
-            newWin.location.href = url;   // redirect the already-open tab
-          } else {
-            // fallback if popup blocked
-            window.location.href = url;   // open in same tab
-          }
-        } finally {
-          googleBtn.textContent = original;
-          googleBtn.style.pointerEvents = "";
+    // OPEN TAB IMMEDIATELY (needed for Safari)
+    const newWin = window.open("about:blank", "_blank");
+
+    setTimeout(() => {
+
+      try {
+        if (newWin && !newWin.closed) {
+          newWin.location.href = url;
+        } else {
+          window.location.href = url;
         }
-      }, delayMs);
-    });
-  }
+      } finally {
+        googleBtn.textContent = original;
+        googleBtn.style.pointerEvents = "";
+      }
+
+    }, delayMs);
+
+  });
+
 })();
 </script>
+
+</body>
+</html>
