--- a/r/Massage-Morgan-J4H8.html
+++ b/r/Massage-Morgan-J4H8.html
@@ -13,11 +13,12 @@
 
 <div class="card"
   data-employee="Morgan"
+  data-no-name="true"
   data-business="Urban Oasis Massage & Wellness"
   data-business-type="massage"
   data-google-review-url="https://www.google.com/search?client=safari&hs=7PhU&sca_esv=a9a9972681dccfab&hl=en-us&sxsrf=ANbL-n4veoWG7eEpBBwjDXaZmvvolmNBUA:1771296907990&q=urban+oasis+massage+%26+wellness+reviews&uds=ALYpb_kvW42IGJqj2DPrnL3j1f7_QvoLR4Og-uIVf4DptQCJ0OiJy0Tje4sk_02gLo0HLOtZ_7gRXKF0mmXOqD9HCTMPijYuYWxJf3i-5Ip4OGuv_UqOgIFQiQC6kzA0TDpwBuvZjtbyzV9Cr9KQSSZJAqUlKuJ-SDKHFW-lstbQU9cNyJecvmQxcwU2r9qVnu4sCvWvHbL7gXrBOG0-Pmq0-kRbE6VxdlLT1sitKDUSZCfHVGw6U_VmxmwaYjvImJezhZx5o0YscuOiG93zGuLdEsKrkN7A8oHxZG0x9OBrvaC4UNKA1UrMSQpknJWJNI6XoEBx-yoHCDDsG6bOblPeFehGZLuNu95WKkxnFpkfZAXXcsjfk9QPktBxHlkQxCHxqBjwvvSEcBGsXi3FnQFpVM1nGg6dwSv8mZXk61Er4XvBRsGDj0elI6vnBVVTByHuXENycO0PIv_Gzo3l28mQTkztY_kNq9uiIlmHyi64mbKjWcjb4Co&si=AL3DRZEsmMGCryMMFSHJ3StBhOdZ2-6yYkXd_doETEE1OR-qOWnM1VFga8ZdGwH6ts8zjCn5iEWVZEoGTbU7H5en-cdPAyLzXKXTLrDxn4swSFS8KXJO_eHtfypeDxWPrbCLMK9ikUWY6oy8pVESEIIpKQQw9rppGg%3D%3D&sa=X&ved=2ahUKEwjWiPiXw9-SAxWFJEQIHX3uF9oQk8gLegQIGxAB&ictx=1&biw=393&bih=749&dpr=3#ebo=1">
 
-  <h1>Leave Morgan a quick review</h1>
+  <h1>Leave a quick review</h1>
   <p class="business">Urban Oasis Massage & Wellness</p>
 
   <button id="draftBtn">Draft review with AI</button>
